finish part 2: 01_dockerfiles

--- a/01_dockerfiles/ex02/ft-rails/Dockerfile
+++ b/01_dockerfiles/ex02/ft-rails/Dockerfile
@@ -1,15 +1,19 @@
 FROM ruby
 
+MAINTAINER iel-ferk <issam.elferkh@gmail.com>
+
 RUN apt-get update -y && \
 	apt-get install -y sqlite3 nodejs ruby-dev  && \
 	gem update && \
 	gem install bundler rails
 
-#copy app
-ONBUILD	ADD app /opt/app
+ONBUILD	COPY app /opt/app
 ONBUILD WORKDIR /opt/app/
-ONBUILD RUN bundle install
-ONBUILD RUN bin/rake db:migrate && bin/rake db:seed
 
-# Build it?
+ONBUILD EXPOSE 3000
+ONBUILD RUN bundle install
+ONBUILD RUN bin/rake db:migrate
+ONBUILD RUN bin/rake db:seed
+
+# To build it?
 # docker build -t ft-rails:on-build .
