--- a/01_dockerfiles/ex02/Dockerfile
+++ b/01_dockerfiles/ex02/Dockerfile
@@ -1,9 +1,9 @@
 FROM ft-rails:on-build
 
 EXPOSE 3000
-CMD [ "rails" , "s", "-b", "0.0.0.0", "-p", "3000"]
+CMD ["rails", "s", "-b", "0.0.0.0", "-p", "3000"]
 
-# Build it?
+# To build it?
 # docker build -t ex02:1.0 .
 
 # To run it?
